# fx-store-poc

./: AGENTS.md  Cargo.toml  README.md  justfile
docs/: api-reference.md  architecture.md  benchmarks.md  cache-optimization.md  data-format.md  deployment.md  getting-started.md  hardware-wsl.md  performance.md
src/: api.rs  bench.rs  block.rs  main.rs  mmap_format.rs  query.rs  store.rs  types.rs
