[package]
name = "fx-store"
version = "0.1.0"
edition = "2024"


[dependencies]
memmap2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
zstd = "0.13"
dashmap = "6.1.0"
crossbeam = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
bytes = "1.5"
parking_lot = "0.12"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
